restructuring the project directories

--- a/AnimalPredVercel/api/templates/result.html
+++ b/AnimalPredVercel/api/templates/result.html
@@ -3,14 +3,14 @@
 <html>
 <head>
     <title>Animal Detector</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body class="forest-bg">
     <div class="container">
         <h1>Animal Detected</h1>
         <h2>The Animal is Predicted to Be a:</h2>
+        <p>Animal</p>
         <a href="{{ url_for('index') }}" class="btn btn-primary">Back to Homepage</a>
     </div>
 </body>
 </html>
-
