--- a/AnimalPredVercel/api/templates/index.html
+++ b/AnimalPredVercel/api/templates/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Animal Predictor</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='frontend/style.css') }}" type="text/css">
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="container">
@@ -20,7 +19,7 @@
     </div>
     <div class="right-pane">
         <p> This is an Animal Predictor model for only 80 species, check on the left corner. The model accuracy improves with time. Don't stress your brain out! </p>
-        <form method="post" action="{{ url_for('show_prediction') }}" enctype="multipart/form-data">
+        <form method="post" action="{{ url_for('result') }}" enctype="multipart/form-data">
             <div class="form-group">
             <label for="image">Select an image to predict:</label>
             <input type="file" name="image" id="image" accept="image/*">
